--- a/main.html
+++ b/main.html
@@ -10,6 +10,30 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
+
+		<label for="name">Name</label>
+		<input type="text" id="name" placeholder="Name" required>
+
+		<label for="phone">Phone Number</label>
+		<input type="text" id="phone" placeholder="Phone Number" required>
+
+		<label for="address">Address</label>
+		<input type="text" id="address" placeholder="Address">
+
+		<input type="checkbox" id="checkbox" name="checkbox">
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+
+		<label for="multiSelect">Please select your preferred breeds</label>
+		<select id="multiSelect">
+			<option value="" disabled selected hidden>--Please Choose an option--</option>
+			<option value="indian">Indian</option>
+			<option value="londan">Londan</option>
+			<option value="america">America</option>
+		</select>
+
+		<button type="submit" id="submit" value="Submit">
+	</form>
 
 </body>
 
