--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 		<input type="text" id="address" placeholder="Address">
 
 		<label for="checkbox">Have you ever lived with a Dog before?</label>
-		<input type="checkbox" id="checkbox" name="checkbox">
+		<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
 		
 
 		<label for="multiSelect">Please select your preferred breeds</label>
@@ -33,7 +33,7 @@
 			<option value="america">America</option>
 		</select>
 
-		<button type="submit" id="submit" value="Submit">
+		<input type="submit" id="submit" value="Submit">
 	</form>
 
 </body>
